--- a/conf/dependencies.cfg
+++ b/conf/dependencies.cfg
@@ -5,5 +5,13 @@ dependencies:
         location: 'http://www.makotemplates.org/downloads/Mako-0.3.4.tar.gz'
         version: '0.3.4'
       },
+      { name : 'SQLAlchemy'
+	location: 'http://pypi.python.org/packages/source/S/SQLAlchemy/SQLAlchemy-0.6.2.tar.gz'
+	version: '0.6.2'
+      },
+      { name : 'boto'
+	location: 'http://boto.googlecode.com/files/boto-2.0a2.tar.gz'
+	version: '2.0a2'
+      }
 
     ]
