--- a/conf/dependencies.cfg
+++ b/conf/dependencies.cfg
@@ -12,6 +12,10 @@ dependencies:
       { name : 'boto'
 	location: 'http://boto.googlecode.com/files/boto-2.0a2.tar.gz'
 	version: '2.0a2'
-      }
+      },
+      { name : 'paste'
+	location: 'http://pypi.python.org/packages/source/P/Paste/Paste-1.7.4.tar.gz'
+	version:'1.7.4'
+	}
 
     ]
