--- a/conf/teaparty.cfg
+++ b/conf/teaparty.cfg
@@ -8,7 +8,10 @@
 	 "port":""
      },
      "server":{
-  	"hostname":"localhost",
-	"port":8001,
+  	"hostname":"127.0.0.1",
+	"port":8080,
+     },
+     "jobs": {
+	"directory":"jobs"
      }
-
+	
